# ml-stockprice-prediction

./: .env.sample  .gitignore  .pre-commit-config.yaml  .snyk  .synk  Dockerfile.sagemaker  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: run_pytest.yml  run_tests.yml
notebooks/: hyperband_tuning.ipynb
src/: __init__.py  batch.py  client.py  main.py  websocket.py
src/_utils/: __init__.py  log.py
src/dag/: dag.py
src/data_handling/: __init__.py  data_handler.py  delta.py  drift_test.py  extract.py  extracting.py  loading.py  run_lakehouse.py  spark.py
src/data_handling/lakehouse/: bronze.py  gold.py  silver.py
src/model/: __init__.py  baseline.py  inference.py  instantiate.py  model_handler.py  reconstruct.py  tuning.py
tests/: conftest.py  dag_test.py
tests/model/: instantiate_test.py
